# expense-tracqer

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: notes.txt
source/: expense_lib.cpp  expense_lib.hpp  expense_tracquer.cpp  expense_tracquer.hpp  main.cpp
test/: CMakeLists.txt
test/source/: expense_tracquer_test.cpp
